--- a/index.html
+++ b/index.html
@@ -486,6 +486,12 @@
                         <input type="text" id="monthlyRent" placeholder="0" value="0" inputmode="numeric">
                         <span class="info-text">الإيجار الشهري للعقار</span>
                     </div>
+
+                    <div class="form-group">
+                        <label for="propertyPrice">سعر الوحدة (د.ع) - اختياري</label>
+                        <input type="text" id="propertyPrice" placeholder="130000000" value="130000000" inputmode="numeric">
+                        <span class="info-text">السعر الأساسي للوحدة (الافتراضي: 130 مليون)</span>
+                    </div>
                 </div>
             </div>
 
@@ -548,6 +554,40 @@
                     </div>
                 </div>
             </div>
+
+            <h2>📈 الربح الصافي بعد 5 سنوات من البيع</h2>
+            <div class="results-grid">
+                <div class="result-card highlight">
+                    <div class="result-label">الربح الصافي (5 سنوات)</div>
+                    <div class="result-value" id="totalProfit5Year">0</div>
+                </div>
+            </div>
+
+            <div style="background: #fffbf0; padding: 20px; border-radius: 12px; border-left: 5px solid #ff9800; margin-top: 20px;">
+                <h3 style="color: #ff9800; margin-bottom: 15px;">📌 ملاحظة توضيحية (مصادر الربح):</h3>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px;">
+                    <div style="padding: 10px; background: white; border-radius: 8px;">
+                        <div style="color: #666; font-size: 13px; margin-bottom: 5px;">1. قيمة الخصم</div>
+                        <div style="color: #ff9800; font-weight: 700; font-size: 16px;" id="breakdownDiscount">0</div>
+                    </div>
+                    <div style="padding: 10px; background: white; border-radius: 8px;">
+                        <div style="color: #666; font-size: 13px; margin-bottom: 5px;">2. صعود العقار (5 مليون × 5 سنوات)</div>
+                        <div style="color: #ff9800; font-weight: 700; font-size: 16px;" id="breakdownAppreciation">0</div>
+                    </div>
+                    <div style="padding: 10px; background: white; border-radius: 8px;">
+                        <div style="color: #666; font-size: 13px; margin-bottom: 5px;">3. أرباح استثمار الفائض (5 سنوات)</div>
+                        <div style="color: #ff9800; font-weight: 700; font-size: 16px;" id="breakdownInvestmentProfit">0</div>
+                    </div>
+                    <div style="padding: 10px; background: white; border-radius: 8px;">
+                        <div style="color: #666; font-size: 13px; margin-bottom: 5px;">4. إيراد الإيجار (5 سنوات)</div>
+                        <div style="color: #ff9800; font-weight: 700; font-size: 16px;" id="breakdownRentIncome">0</div>
+                    </div>
+                    <div style="padding: 10px; background: white; border-radius: 8px;">
+                        <div style="color: #666; font-size: 13px; margin-bottom: 5px;">5. فائض القرض</div>
+                        <div style="color: #ff9800; font-weight: 700; font-size: 16px;" id="breakdownLoanSurplus">0</div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="footer">
             © 2025 شركة المستشار المؤسسي | جميع الحقوق محفوظة
@@ -557,10 +597,12 @@
 
     <script>
         // الثوابت
-        const UNIT_PRICE = 130000000;
+        const DEFAULT_UNIT_PRICE = 130000000;
         const LOAN_AMOUNT = 120000000;
         const PROFIT_RATE = 0.15; // 15%
         const ANNUAL_BANK_DEDUCTION = 7941000;
+        const ANNUAL_PROPERTY_APPRECIATION = 5000000; // 5 ملايين سنوياً
+        const YEARS_FOR_5_YEAR_CALC = 5;
 
         // دالة تنسيق الأرقام بفواصل
         function formatNumber(num) {
@@ -608,9 +650,10 @@
             const addedAmount = parseInputValue(document.getElementById('addedAmount'));
             const propertyValuation = parseInputValue(document.getElementById('propertyValuation'));
             const monthlyRent = parseInputValue(document.getElementById('monthlyRent'));
+            const propertyPrice = parseInputValue(document.getElementById('propertyPrice')) || DEFAULT_UNIT_PRICE;
 
             // 1) حساب السعر النهائي للوحدة
-            const finalUnitPrice = UNIT_PRICE - discount;
+            const finalUnitPrice = propertyPrice - discount;
 
             // 2) حساب رأس المال
             const clientCapital = previousAmount + existingProfits + addedAmount + propertyValuation;
@@ -680,6 +723,24 @@
             document.getElementById('totalAnnualIncome').textContent = formatNumber(totalAnnualIncome);
             document.getElementById('netAnnualProfit').textContent = formatNumber(netAnnualProfit);
 
+            // حساب النتائج بعد 5 سنوات
+            const discountValue5Year = discount;
+            const propertyAppreciation5Year = ANNUAL_PROPERTY_APPRECIATION * YEARS_FOR_5_YEAR_CALC;
+            const investmentProfit5Year = annualInvestmentProfit * YEARS_FOR_5_YEAR_CALC;
+            const rentIncome5Year = annualRentIncome * YEARS_FOR_5_YEAR_CALC;
+            const loanSurplus5Year = loanSurplus;
+            const totalProfit5Year = discountValue5Year + propertyAppreciation5Year + investmentProfit5Year + rentIncome5Year + loanSurplus5Year;
+
+            // عرض الربح الصافي بعد 5 سنوات
+            document.getElementById('totalProfit5Year').textContent = formatNumber(totalProfit5Year);
+            
+            // عرض البيانات التفصيلية في الملاحظة
+            document.getElementById('breakdownDiscount').textContent = formatNumber(discountValue5Year);
+            document.getElementById('breakdownAppreciation').textContent = formatNumber(propertyAppreciation5Year);
+            document.getElementById('breakdownInvestmentProfit').textContent = formatNumber(investmentProfit5Year);
+            document.getElementById('breakdownRentIncome').textContent = formatNumber(rentIncome5Year);
+            document.getElementById('breakdownLoanSurplus').textContent = formatNumber(loanSurplus5Year);
+
             // إظهار قسم النتائج
             document.getElementById('resultsSection').classList.add('show');
 
@@ -716,8 +777,9 @@
             const addedAmount = parseInputValue(document.getElementById('addedAmount'));
             const propertyValuation = parseInputValue(document.getElementById('propertyValuation'));
             const monthlyRent = parseInputValue(document.getElementById('monthlyRent'));
+            const propertyPrice = parseInputValue(document.getElementById('propertyPrice')) || DEFAULT_UNIT_PRICE;
 
-            const finalUnitPrice = UNIT_PRICE - discount;
+            const finalUnitPrice = propertyPrice - discount;
             const clientCapital = previousAmount + existingProfits + addedAmount + propertyValuation;
             const amountToPay = finalUnitPrice - clientCapital;
             const loanSurplus = LOAN_AMOUNT - amountToPay;
